--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sqlite3": "^5.0.2",
+    "tedious": "^14.3.0"
   }
 }
