--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
     "body-parser": "^1.19.0",
     "config": "^3.2.3",
     "consign": "^0.1.6",
